# tabled

./: .gitignore  AUTHORS  ChangeLog.old-git  LICENSE  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  mk-tabledb.sql
doc/: Makefile.am  contributions.txt  etc.tabled.conf  release-process.txt  setup.txt  states.txt
include/: Makefile.am  httpstor.h  httputil.h  s3c.h  tdb.h
lib/: .gitignore  Makefile.am  httpstor.c  httputil.c  libhttpstor-uninstalled.pc.in  libhttpstor.pc.in  libs3c-uninstalled.pc.in  libs3c.pc.in  readport.c  s3c.c  tdb.c  uri.c
pkg/: tabled.init  tabled.spec  tabled.sysconf
server/: .gitignore  Makefile.am  atcp.c  atcp.h  bucket.c  cldu.c  config.c  metarep.c  object.c  replica.c  server.c  status.c  stor_chunk.c  stor_fs.c  stor_swift.c  storage.c  storparse.c  tabled.h  tdbadm.c  util.c
test/: .gitignore  Makefile.am  basic-bucket.c  basic-object.c  be_fs-test.conf  chunkd-test.conf  combo-redux  daemon-running  hdr-content-type.c  hdr-meta.c  it-works.c  large-object.c  libtest.c  list-keys.c  pid-exists  prep-db  start-daemon  stop-daemon  swift-test.conf  tabled-test.conf  test.h  users.data  wait-for-listen.c
